feat(be): add structured slide content plans